[package]
name = "menu-rs"
version = "0.1.0"
edition = "2024"
authors = ["Patricio Moracho\n<pmoracho@gmail.com>",]
repository = "https://github.com/pmoracho/menu-rs"
description = "Un menu interactivo y configurable para terminales"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
