[package]
name = "tmenu"
version = "1.0.7"
edition = "2024"
authors = ["Patricio Moracho\n<pmoracho@gmail.com>",]
repository = "https://github.com/pmoracho/tmenu"
description = "Un menu interactivo y configurable para terminales"

[package.metadata.wix]
upgrade-guid = "1636E04D-C2BA-4840-B4A5-17AC7A9F5B99"
path-guid = "7A1C5B68-8360-47E4-BADE-18919DBBE73F"
license = false
eula = false

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.6.1", features = ["derive"] }
shlex = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
